apply plugin: 'com.android.application'

android {
    compileSdkVersion 31

    defaultConfig {
        applicationId 'com.jwindustries.isitvegan'
        minSdkVersion 24
        targetSdkVersion 31
        versionCode 1
        versionName '1.0'

        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.4.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
    implementation 'androidx.recyclerview:recyclerview:1.2.1'
    implementation 'androidx.preference:preference:1.1.1'
    implementation 'androidx.camera:camera-camera2:1.1.0-alpha12'
    implementation 'androidx.camera:camera-lifecycle:1.1.0-alpha12'
    implementation 'androidx.camera:camera-view:1.0.0-alpha32'
    implementation 'com.android.volley:volley:1.2.1'
    implementation 'com.github.turing-tech:MaterialScrollBar:13.3.4'
    implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:17.0.0'
    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.1'
    implementation 'com.google.android.material:material:1.6.0-alpha01'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
}